# deepcomedy

./: .gitignore  Char-level GRU syllabification.ipynb  Char2Char Decoder-only generator.ipynb  Char2Char generation and syllabification.ipynb  Char2Char transformer gen and syll.ipynb  Char2Char transformer generation-WORKING.ipynb  Char2Char transformer generation.ipynb  Character-level GRU syllabification.ipynb  Character-level decoder-only.ipynb  Character-level syllabification Orlando.ipynb  Character-level transformer generation.ipynb  Character-level transformer syllabification.ipynb  Deep Comedy experiments.ipynb  Deep Comedy transformers.ipynb  Deep_Comedy_experiments.ipynb  Deep_Comedy_transformers.ipynb  Generation.ipynb  LICENSE.txt  NMT with attention.ipynb  NMT_with_attention.ipynb  README.md  Syll wandb sweep.ipynb  Syllabification comparisons.ipynb  Syllable-level Transformer.ipynb  Text_generation_with_RNN.ipynb  Word-input char-output transformer generation.ipynb  Word-input syll-output transformer generation.ipynb  Word-input-syll-output transformer generation.ipynb  Word-level Transformer.ipynb  Word-level transformer generation.ipynb  Word2Char generation.ipynb  Word2Char transformer generation-WORKING.ipynb  Word_input_syll_output_transformer_generation.ipynb  preprocess.sh  pyproject.toml  requirements.txt
data/: divina.txt  divina_syll.txt  divina_syll_textonly.txt  divina_textonly.txt  divina_training.tsv  orlando-textonly.txt
deepcomedy/: generation.py  metrics.py  preprocessing.py  utils.py
experiments/: Char2Char Decoder-only generator.ipynb
nlgpoetry/: hyphenation.py  utils.py
(+9 files in other folders)
