[tool.poetry]
name = "deepcomedy"
version = "0.1.0"
description = ""
authors = ["Alessandro Pacielli <alessandropacielli@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.7.1,<4.0"
pandas = "^1.2.3"
tensorflow = "^2.4.1"
matplotlib = "^3.4.1"
scikit-learn = "^0.24.1"
tensorflow-datasets = "^4.2.0"
tensorflow-text = "^2.4.3"
jupyterlab = "^3.0.14"
wandb = "^0.10.27"
jupyterlab-git = "^0.30.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
autopep8 = "^1.5.6"
isort = "^5.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
